--- a/templates/index.html
+++ b/templates/index.html
@@ -4,22 +4,6 @@
 <head>
     <meta charset="utf-8">
     <title>ASP</title>
-    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
-    <link rel="stylesheet" href="app.css" />
-    <script src="bower_components/angular/angular.js"></script>
-    <script src="bower_components/angular-route/angular-route.js"></script>
-    <script src="app.module.js"></script>
-    <script src="app.config.js"></script>
-    <script src="app-detail/app-detail.module.js"></script>
-    <script src="app-detail/app-detail.component.js"></script>
-    <script src="app-head/app-head.module.js"></script>
-    <script src="app-head/app-head.component.js"></script>
-    <script src="app-tool/app-tool.module.js"></script>
-    <script src="app-tool/app-tool.component.js"></script>
-    <script src="/bower_components/angular-aria/angular-aria.js"></script>
-    <script src="/bower_components/angular-animate/angular-animate.js"></script>
-    <script src="/bower_components/angular-material/angular-material.js"></script>
-    <link rel="stylesheet" href="/bower_components/angular-material/angular-material.css">
     <link data-require="bootstrap-css@3.3.6" data-semver="3.3.6" rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.css" />
     <script data-require="jquery@2.2.4" data-semver="2.2.4" src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script data-require="bootstrap.js@*" data-semver="3.3.6" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
@@ -29,6 +13,12 @@
         text-align: center;
     }
     </style>
+    <script type="text/javascript">
+        $(document).on('click', '[data-toggle="lightbox"]', function(event) {
+            event.preventDefault();
+            $(this).ekkoLightbox();
+        });
+    </script>
 </head>
 
 <body class="container" >
@@ -75,6 +65,9 @@
     {% endif %}
 </div>
 
+<div class="text-center">
+  <img src="/static/{{type}}_wordcloud.jpg" class="rounded">
+</div>
 
 
 <div class="row">
@@ -136,5 +129,5 @@
 </div>
 
 </body>
-
+</script>
 </html>
